// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Force HTTPS Should not redirect when already requested https 1`] = `
ActionResult {
  "body": "not processed",
  "cookies": Array [],
  "headers": Object {},
  "status": undefined,
}
`;

exports[`Force HTTPS Should priorities code vs configuration 1`] = `"https://127.0.0.1/animal/index"`;

exports[`Force HTTPS Should redirect to https when enabled 1`] = `"https://127.0.0.1/animal/index"`;

exports[`Force HTTPS Should redirect to https when enabled using env variable 1`] = `"https://127.0.0.1/animal/index"`;

exports[`Proxy Headers Should accept protocol when trusted 1`] = `
Object {
  "protocol": "https",
}
`;

exports[`Proxy Headers Should not accept protocol by default 1`] = `
Object {
  "protocol": "http",
}
`;
